--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,3 +18,5 @@ sonar.dynamicAnalysis=reuseReports
 
 # Encoding of the source code
 sonar.sourceEncoding=UTF-8
+
+sonar.nodejs.executable=/home/jenkins/tools/jenkins.plugins.nodejs.tools.NodeJSInstallation/nodejs
